--- a/yesod-markdown.cabal
+++ b/yesod-markdown.cabal
@@ -10,6 +10,7 @@ maintainer:             Patrick Brisbin <pbrisbin@gmail.com>
 category:               Web, Yesod
 build-type:             Simple
 cabal-version:          >=1.8
+extra-source-files:     README.md
 
 library
   hs-source-dirs:       src
