--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
             - stack-{{ .Branch }}
             - stack-
       - run:
+          name: Upgrade Stack
+          command: stack upgrade
+      - run:
           name: Dependencies
           command: make setup
       - run:
