--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ references:
       - run:
           name: Dependencies
           command: make setup
+          no_output_timeout: 120m
       - run:
           name: Build
           command: make build
