--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,13 +36,7 @@ references:
           command: make test
       - run:
           name: Lint
-          command: |
-            if [ "${LINT:-1}" -eq 0 ]; then
-              echo "Skipping lint (LINT=0)" >&2
-              exit 0
-            fi
-
-            make lint
+          command: make lint
 
 jobs:
   build_8.0.2:
