Add 8.4.3-specific job
It's concurrent, so who cares.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,11 @@ jobs:
     environment:
       STACK_ARGUMENTS: --no-terminal
       STACK_YAML: stack-lts-11.19.yaml
+  build_8.4.3:
+    <<: *stack_build
+    environment:
+      STACK_ARGUMENTS: --no-terminal
+      STACK_YAML: stack-lts-12.2.yaml
   build:
     <<: *stack_build
     environment:
@@ -71,5 +76,6 @@ workflows:
     jobs:
       - build_8.0.2
       - build_8.2.2
+      - build_8.4.3
       - build
       - build_nightly
