--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ references:
       - run:
           name: Digest
           command: |
-            echo -- "$STACK_ARGUMENTS" > rdigest
+            echo -- "${STACK_YAML}/${STACK_ARGUMENTS}" > rdigest
             git ls-files | xargs md5sum > sdigest
       - restore_cache:
           keys:
