--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,15 @@ references:
     steps:
       - checkout
       - run:
+          name: Upgrade Stack
+          command: stack upgrade
+      - run:
           name: Digest
           command: |
-            echo -- "${STACK_YAML}/${STACK_ARGUMENTS}" > rdigest
+            {
+              stack --version
+              echo -- "${STACK_YAML}/${STACK_ARGUMENTS}"
+            } > rdigest
             git ls-files | xargs md5sum > sdigest
       - restore_cache:
           keys:
@@ -21,10 +27,7 @@ references:
             - 1-master-
       - run:
           name: Dependencies
-          command: |
-            # https://github.com/commercialhaskell/stack/issues/4071
-            rm -rf ~/.stack/precompiled/x86_64-linux/*/*/haddock-library-1.6.0*
-            make setup
+          command: make setup
           no_output_timeout: 120m
       - run:
           name: Build
