--- a/stack-nightly.yaml
+++ b/stack-nightly.yaml
@@ -3,7 +3,16 @@
 # can't leave it blank either, so here's a value that we'll override by
 # --resolver nightly.
 resolver: lts-11.5
-allow-newer: true
 extra-deps:
   - HsYAML-0.1.1.2
   - pandoc-2.2.2.1
+
+# Sometimes necessary, sometimes problematic. Hopefully never both?
+#
+# This option is horribly mis-named: it's not "allow newer"; it's "completely
+# ignore any version bounds ever"... The former is often necessary for nightly,
+# but the latter is sometimes problematic. So we have no choice but to try it
+# when needed, hope it doesn't break the world, and when it eventually does,
+# hope whatever needed it originally is resolved. So. Fun.
+#
+# allow-newer: true
