--- a/stack-nightly.yaml
+++ b/stack-nightly.yaml
@@ -1,9 +1,9 @@
 # Date of last update, overridden on CI with --resolver
-resolver: nightly-2018-09-23
+resolver: nightly-2018-11-23
 
-extra-deps:
-  - HsYAML-0.1.1.2
-  - pandoc-2.2.3.2
+# extra-deps:
+#   - HsYAML-0.1.1.2
+#   - pandoc-2.2.3.2
 
 # Sometimes necessary, sometimes problematic. Hopefully never both?
 #
