--- a/stack-lts-9.21.yaml
+++ b/stack-lts-9.21.yaml
@@ -1,4 +1,3 @@
----
 resolver: lts-9.21
 extra-deps:
   - ansi-terminal-0.8.0.1
@@ -10,3 +9,6 @@ extra-deps:
   - pandoc-types-1.17.3.1
   - skylighting-0.6
   - texmath-0.10.1.1
+
+# Fix weeder with stack-2.0
+ghc-options: { "$locals": -ddump-to-file -ddump-hi }
