--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,108 +1,188 @@
-version: 2.0
+version: 2.1
 
-references:
-  stack_build: &stack_build
-    docker:
-      # https://github.com/haskell-works/stack-build/blob/master/minimal/Dockerfile
-      - image: quay.io/haskell_works/stack-build-minimal
-    steps:
-      - checkout
-      - run:
-          name: Upgrade Stack
-          command: stack upgrade
-      - run:
-          name: Digest
-          command: |
-            {
-              stack --version
-              echo -- "${STACK_YAML}/${STACK_ARGUMENTS}"
-            } > rdigest
-            git ls-files | xargs md5sum > sdigest
-      - restore_cache:
-          keys:
-            - v3-{{ .Branch }}-{{ checksum "rdigest" }}-{{ checksum "sdigest" }}
-            - v3-{{ .Branch }}-{{ checksum "rdigest" }}-
-            - v3-{{ .Branch }}-
-            - v3-master-
-      - run:
-          name: Dependencies
-          command: |
-            # https://github.com/commercialhaskell/stack/issues/4071
-            rm -rf ~/.stack/precompiled/x86_64-linux/*/*/haddock-library-*
+# {{{ Begin Local Orb
+#
+# TODO: Extract, release, use across all Haskell OSS
+#
+orbs:
+  stack-build:
+    jobs:
+      ubuntu:
+        parameters:
+          stack-yaml:
+            description: "Path to stack.yaml file to use"
+            type: string
+            default: stack.yaml
+          stack-arguments:
+            description: "Additional arguments for ALL Stack invocations"
+            type: string
+            default: ""
+          heavy-dependencies:
+            description: "Dependencies to build first, with -j 1"
+            type: string
+            default: ""
+          hlint:
+            description: "Run HLint?"
+            type: boolean
+            default: true
+          weeder:
+            description: "Run Weeder?"
+            type: boolean
+            default: true
+          cache-epoch:
+            description: "Prefix used for all cache keys"
+            type: integer
+            default: 1
+        machine:
+          image: ubuntu-1604:201903-01
+        steps:
+          - checkout
+          - run:
+              name: Install Stack
+              command: curl -sSL https://get.haskellstack.org/ | sh
+          - run:
+              name: Digest
+              command: |
+                # TODO: once committing the cabal file catches on, we can just
+                # assume it exists and md5sum *.cabal here.
+                find . -maxdepth 1 -type f \
+                  -name package.yaml -name '*.cabal' \
+                  -exec md5sum {} + > project.digest
 
-            if [ "${LINT:-1}" = 1 ]; then
-              make setup setup.lint
-            else
-              make setup
-            fi
-          no_output_timeout: 120m
-      - run:
-          name: Build
-          command: make build
-      - save_cache:
-          # yamllint disable-line rule:line-length
-          key: v3-{{ .Branch }}-{{ checksum "rdigest" }}-{{ checksum "sdigest" }}
-          paths:
-            - ~/.stack
-            - ./.stack-work
-      - run:
-          name: Test
-          command: make test
-      - run:
-          name: Lint
-          command: |
-            if [ "${LINT:-1}" = 1 ]; then
-              curl -L -o .hlint.yaml \
-                https://raw.githubusercontent.com/pbrisbin/dotfiles/master/hlint.yaml
-              make lint
-            fi
-
-jobs:
-  build_8.0.2:
-    <<: *stack_build
-    environment:
-      STACK_ARGUMENTS: --no-terminal
-      STACK_YAML: stack-lts-9.21.yaml
-  build_8.2.2:
-    <<: *stack_build
-    environment:
-      STACK_ARGUMENTS: --no-terminal
-      STACK_YAML: stack-lts-11.19.yaml
-  build_8.4.3:
-    <<: *stack_build
-    environment:
-      STACK_ARGUMENTS: --no-terminal
-      STACK_YAML: stack-lts-12.10.yaml
-  build:
-    <<: *stack_build
-    environment:
-      STACK_ARGUMENTS: --no-terminal
-  build_nightly:
-    <<: *stack_build
-    environment:
-      # weeder is not happy, again
-      # https://circleci.com/gh/pbrisbin/yesod-markdown/222
-      LINT: 0
-      STACK_ARGUMENTS: --no-terminal --resolver nightly
-      STACK_YAML: stack-nightly.yaml
-      EXTRA_J1_DEPS: JuicyPixels pandoc
+                git ls-files | xargs md5sum > source.digest
+          - restore_cache:
+              keys:
+                - v<<parameters.cache-epoch>>-dependencies-{{ checksum "<<parameters.stack-yaml>>" }}-{{ checksum "project.digest" }}
+                - v<<parameters.cache-epoch>>-dependencies-{{ checksum "<<parameters.stack-yaml>>" }}-
+          - when:
+              condition: <<parameters.heavy-dependencies>>
+              steps:
+                - run:
+                    # Build single-threaded first, to avoid out of memory
+                    name: Build heavy dependencies
+                    command: stack build -j 1
+                      --stack-yaml "<<parameters.stack-yaml>>"
+                      --no-terminal
+                      <<parameters.stack-arguments>>
+                      <<parameters.heavy-dependencies>>
+          - run:
+              name: Build dependencies
+              command: stack build
+                --stack-yaml "<<parameters.stack-yaml>>"
+                --no-terminal
+                <<parameters.stack-arguments>>
+                --dependencies-only
+                --bench
+                --no-run-benchmarks
+                --test
+                --no-run-tests
+          - when:
+              condition: <<parameters.hlint>>
+              steps:
+                - run:
+                    name: Install HLint
+                    command: stack install
+                      --stack-yaml "<<parameters.stack-yaml>>"
+                      --no-terminal
+                      <<parameters.stack-arguments>>
+                      --copy-compiler-tool hlint weeder
+          - when:
+              condition: <<parameters.weeder>>
+              steps:
+                - run:
+                    name: Install Weeder
+                    command: stack install
+                      --stack-yaml "<<parameters.stack-yaml>>"
+                      --no-terminal
+                      <<parameters.stack-arguments>>
+                      --copy-compiler-tool weeder
+          - save_cache:
+              key: v<<parameters.cache-epoch>>-dependencies-{{ checksum "<<parameters.stack-yaml>>" }}-{{ checksum "project.digest" }}
+              paths:
+                - ~/.stack
+                - ./.stack-work
+          - restore_cache:
+              keys:
+                - v<<parameters.cache-epoch>>-{{ checksum "<<parameters.stack-yaml>>" }}-{{ checksum "project.digest" }}-{{ checksum "source.digest" }}
+                - v<<parameters.cache-epoch>>-{{ checksum "<<parameters.stack-yaml>>" }}-{{ checksum "project.digest" }}
+                - v<<parameters.cache-epoch>>-{{ checksum "<<parameters.stack-yaml>>" }}-
+          - run:
+              name: Build
+              command: stack build
+                --stack-yaml "<<parameters.stack-yaml>>"
+                --no-terminal
+                <<parameters.stack-arguments>>
+                --pedantic
+                --test
+                --no-run-tests
+          - save_cache:
+              key: v<<parameters.cache-epoch>>-{{ checksum "<<parameters.stack-yaml>>" }}-{{ checksum "project.digest" }}-{{ checksum "source.digest" }}
+              paths:
+                - ./.stack-work
+          - run:
+              name: Test
+              command: stack build
+                --stack-yaml "<<parameters.stack-yaml>>"
+                --no-terminal
+                <<parameters.stack-arguments>>
+                --pedantic
+                --test
+          - when:
+              condition: <<parameters.hlint>>
+              steps:
+                - run:
+                    name: HLint
+                    command: stack exec
+                      --stack-yaml "<<parameters.stack-yaml>>"
+                      --no-terminal
+                      hlint .
+          - when:
+              condition: <<parameters.weeder>>
+              steps:
+                - run:
+                    name: Weeder
+                    command: stack exec
+                      --stack-yaml "<<parameters.stack-yaml>>"
+                      --no-terminal
+                      weeder .
+                    environment:
+                      STACK_YAML: <<parameters.stack-yaml>>
+# }}} END Orb
 
 workflows:
-  version: 2
   commit:
     jobs:
-      - build_8.0.2
-      - build_8.2.2
-      - build_8.4.3
-      - build
-       #- build_nightly
-  # nightly:
-  #   triggers:
-  #     - schedule:
-  #         cron: "0 0 * * *"
-  #         filters:
-  #           branches:
-  #             only:
-  #               - master
-  #   jobs:
-  #     - build_nightly
+      - stack-build/ubuntu:
+          name: "default"
+      - stack-build/ubuntu:
+          name: "ghc-8.8.3 / lts-15.12"
+          stack-yaml: stack-lts-15.12.yaml
+      - stack-build/ubuntu:
+          name: "ghc-8.6.5 / lts-14.27"
+          stack-yaml: stack-lts-14.27.yaml
+      - stack-build/ubuntu:
+          name: "ghc-8.4.3 / lts-12.10"
+          stack-yaml: stack-lts-12.10.yaml
+
+      - stack-build/ubuntu:
+          name: "nightly"
+          stack-yaml: stack-nightly.yaml
+          stack-arguments: --resolver nightly
+          hlint: false
+          weeder: false
+
+  nightly:
+    triggers:
+      - schedule:
+          cron: "0 0 * * *"
+          filters:
+            branches:
+              only:
+                - master
+    jobs:
+      - stack-build/ubuntu:
+          name: "nightly"
+          stack-yaml: stack-nightly.yaml
+          stack-arguments: --resolver nightly
+          hlint: false
+          weeder: false
