--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
           - stack-lts-15.12.yaml
           - stack-lts-14.27.yaml
           - stack-lts-12.10.yaml
+      fail-fast: false
 
     steps:
     - uses: actions/checkout@v2
