--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,14 +18,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run:
+        cp "${{ matrix.stack-yaml }}" /tmp/cache.key
     - uses: actions/cache@v2
       with:
         path: |
           ~/.stack
           ./.stack-work
-        key: ${{ runner.os }}-${{ hashFiles(matrix.stack-yaml) }}-${{ hashFiles('*.cabal') }}
+        key: ${{ runner.os }}-${{ hashFiles('/tmp/cache.key') }}-${{ hashFiles('*.cabal') }}
         restore-keys: |
-          ${{ runner.os }}-${{ hashFiles(matrix.stack.yaml) }}-
+          ${{ runner.os }}-${{ hashFiles('/tmp/cache.key') }}-
           ${{ runner.os }}-
     - uses: freckle/stack-action@main
       with:
