--- a/yesod-markdown.cabal
+++ b/yesod-markdown.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 48d358071c68516b961faf8354b3cc06b3ed2e7733e1e74f25dd4af851e63774
+-- hash: eecead7193986e2a670e31176880877c75ae6ca659129be5f046a6c5c6bc6742
 
 name:           yesod-markdown
-version:        0.12.6.4
+version:        0.12.6.5
 synopsis:       Tools for using markdown in a yesod application
 description:    A subset of Pandoc functionality useful for markdown processing in yesod applications
 category:       Web, Yesod
@@ -39,9 +39,9 @@ library
     , blaze-html >=0.5 && <0.10
     , blaze-markup >=0.5 && <0.9
     , bytestring >=0.9 && <0.12
-    , directory
+    , directory <1.4
     , pandoc >=2.0 && <2.12
-    , persistent >=0.9
+    , persistent >=0.9 && <2.12
     , shakespeare >=2.0 && <2.1
     , text >=0.11 && <2.0
     , xss-sanitize >=0.3.1 && <0.4
@@ -59,8 +59,8 @@ test-suite test
   ghc-options: -Wall -threaded
   build-depends:
       base >=4.8.0 && <5
-    , blaze-html
+    , blaze-html >=0.5 && <0.10
     , hspec
-    , text
+    , text >=0.11 && <2.0
     , yesod-markdown
   default-language: Haskell2010
