--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: yesod-markdown
-version: 0.12.6.9
+version: 0.12.6.10
 synopsis: Tools for using markdown in a yesod application
 description: >
   A subset of Pandoc functionality useful for markdown processing in yesod
@@ -16,23 +16,23 @@ extra-source-files:
 
 dependencies:
   - base >=4.8.0 && <5
-  - blaze-html >=0.5 && <0.10
-  - text >=0.11 && <2.0
+  - blaze-html >=0.5
+  - text >=0.11
 
 ghc-options: -Wall
 
 library:
   source-dirs: src
   dependencies:
-    - bytestring >=0.9 && <0.12
-    - pandoc >=2.0 && <2.14
-    - blaze-markup >=0.5 && <0.9
-    - xss-sanitize >=0.3.1 && <0.4
+    - bytestring >=0.9
+    - pandoc >=2.0
+    - blaze-markup >=0.5
+    - xss-sanitize >=0.3.1
     - directory < 1.4
-    - yesod-core >=1.2 && <1.7
-    - yesod-form >=1.3 && <1.8
-    - shakespeare >=2.0 && <2.1
-    - persistent >=0.9 && < 2.13
+    - yesod-core >=1.2
+    - yesod-form >=1.3
+    - shakespeare >=2.0
+    - persistent >=0.9
 
 tests:
   test:
