--- a/yesod-markdown.cabal
+++ b/yesod-markdown.cabal
@@ -4,10 +4,10 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3a42e4672803025fb94fda72a4157932468daeac3b3f02d5cb1b9d182d5c2fb8
+-- hash: 59ef1b8aa8d77bb2eb6c309871db9cdc72ce15a7e3fc1648e7c2d516f25e40a1
 
 name:           yesod-markdown
-version:        0.12.6.9
+version:        0.12.6.10
 synopsis:       Tools for using markdown in a yesod application
 description:    A subset of Pandoc functionality useful for markdown processing in yesod applications
 category:       Web, Yesod
@@ -36,17 +36,17 @@ library
   ghc-options: -Wall
   build-depends:
       base >=4.8.0 && <5
-    , blaze-html >=0.5 && <0.10
-    , blaze-markup >=0.5 && <0.9
-    , bytestring >=0.9 && <0.12
+    , blaze-html >=0.5
+    , blaze-markup >=0.5
+    , bytestring >=0.9
     , directory <1.4
-    , pandoc >=2.0 && <2.14
-    , persistent >=0.9 && <2.13
-    , shakespeare >=2.0 && <2.1
-    , text >=0.11 && <2.0
-    , xss-sanitize >=0.3.1 && <0.4
-    , yesod-core >=1.2 && <1.7
-    , yesod-form >=1.3 && <1.8
+    , pandoc >=2.0
+    , persistent >=0.9
+    , shakespeare >=2.0
+    , text >=0.11
+    , xss-sanitize >=0.3.1
+    , yesod-core >=1.2
+    , yesod-form >=1.3
   default-language: Haskell2010
 
 test-suite test
@@ -59,8 +59,8 @@ test-suite test
   ghc-options: -Wall -threaded
   build-depends:
       base >=4.8.0 && <5
-    , blaze-html >=0.5 && <0.10
+    , blaze-html >=0.5
     , hspec
-    , text >=0.11 && <2.0
+    , text >=0.11
     , yesod-markdown
   default-language: Haskell2010
