--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,18 +12,28 @@ jobs:
     strategy:
       matrix:
         stack-yaml:
-          - stack.yaml
-          - stack-lts-15.12.yaml
-          - stack-lts-14.27.yaml
-          - stack-lts-12.10.yaml
+          - stack.yaml           # ghc-9.0
+          - stack-lts-18.28.yaml # ghc-8.10
+          - stack-lts-16.31.yaml # ghc-8.8
+          - stack-lts-14.27.yaml # ghc-8.6
+          - stack-lts-12.26.yaml # ghc-8.4
+          - stack-nightly.yaml
       fail-fast: false
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: freckle/stack-cache-action@main
-      with:
-        stack-yaml: ${{ matrix.stack-yaml }}
-    - uses: freckle/stack-action@main
-      with:
-        stack-yaml: ${{ matrix.stack-yaml }}
-        weeder: false
+      - uses: actions/checkout@v2
+      - uses: freckle/stack-cache-action@v2
+        with:
+          stack-yaml: ${{ matrix.stack-yaml }}
+      - uses: freckle/stack-action@v3
+        with:
+          stack-yaml: ${{ matrix.stack-yaml }}
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: rwe/actions-hlint-setup@v1
+      - uses: rwe/actions-hlint-run@v2
+        with:
+          fail-on: warning
