--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name: yesod-markdown
-version: 0.12.6.12
+version: 0.12.6.13
 synopsis: Tools for using markdown in a yesod application
 description: >
   A subset of Pandoc functionality useful for markdown processing in yesod
@@ -10,7 +10,8 @@ maintainer: Patrick Brisbin <pbrisbin@gmail.com>
 license: GPL-2
 github: pbrisbin/yesod-markdown
 homepage: http://github.com/pbrisbin/yesod-markdown
-extra-source-files:
+
+extra-doc-files:
   - README.md
   - CHANGELOG.md
 
