--- a/yesod-markdown.cabal
+++ b/yesod-markdown.cabal
@@ -1,13 +1,13 @@
-cabal-version: 1.12
+cabal-version: 1.18
 
 -- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 9ef22bd61da0e88cf033c211ad12aa906e2197ed296d4d0bfd77d29af07074fe
+-- hash: 1184030098e5ccf7ba85d33605e0508ac673e1f932f7cb0cf4af17cf47cf4b6a
 
 name:           yesod-markdown
-version:        0.12.6.12
+version:        0.12.6.13
 synopsis:       Tools for using markdown in a yesod application
 description:    A subset of Pandoc functionality useful for markdown processing in yesod applications
 category:       Web, Yesod
@@ -18,7 +18,7 @@ maintainer:     Patrick Brisbin <pbrisbin@gmail.com>
 license:        GPL-2
 license-file:   LICENSE
 build-type:     Simple
-extra-source-files:
+extra-doc-files:
     README.md
     CHANGELOG.md
 
